Resolve design issue on mobiles - buttons obstructed so player would need to scroll to move on to the next question.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ main {
 /* title style */
 h1,
 #question-button {
-    font-size: 75px;
+    font-size: 50px;
     margin: 0;
     /* gradient colouring of text */
     background: -webkit-linear-gradient(90deg, #fe3a9e 0%, #f9f871 100%);
@@ -122,7 +122,7 @@ h1,
 }
 
 p {
-    margin: 10% 0;
+    margin: 10% 0 2% 0;
 }
 
 /* general button style */
@@ -133,9 +133,9 @@ button {
     border-style: none;
     cursor: pointer;
     min-width: 150px;
-    min-height: 5rem;
+    min-height: 3rem;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 20px;
     margin: 10%;
 }
 
@@ -179,9 +179,15 @@ footer {
         margin-top: 0;
     }
 
-    /* Button position larger screens */
+    /* Button position and style larger screens */
     button {
         margin: 0;
+        font-size: 25px;
+        min-height: 4rem;
+    }
+/* font size for headers on larger screens */
+    h1, #question-button{
+        font-size: 75px;
     }
 
     /* Select Language Page and select level page: position of trio of option buttons larger screens */
